# MonacoReport

./: .gitignore  MonacoReport.py  README.md  pyproject.toml
formula1/: CLI.py  main.py
main_functions/: CLI.py  building_report.py  config.py  file_operations.py  main.py  printing_report.py
tests/: tests_main.py
